# bulus

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  test_output.html
scripts/: run_scenarios.py  simulate_bulus.py
src/bulus/: __init__.py  config.py  core.py
src/bulus/brain/: prompts.py  worker.py
src/bulus/core/: schemas.py  states.py
src/bulus/engine/: loop.py
src/bulus/runner/: tools.py  worker.py
src/bulus/storage/: repository.py
tests/: test_brain_flow.py  test_brain_integration.py  utils.py
viewer/: __init__.py  display.py  template.html
