[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulus"
version = "0.0.1"
authors = [
  { name = "Gennadii Dobretsov", email = "dobrets@gmail.com" },
]
description = "Deterministic State Management & Replay Engine for LLM Agents"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/dbrts/bulus"
"Bug Tracker" = "https://github.com/dbrts/bulus/issues"
